syntax = "proto3";

message PrimeRequest {
    int64 input = 1;
}

message PrimeRepose {
//    可以重复多个 output
    repeated int64 output =1;
}

service Prime {
    rpc GetPrime (PrimeRequest) returns (PrimeRepose){}
}
